.. _arch-center-changelog:

==================================================
{+atlas-arch-center+} Release Notes
==================================================

.. default-domain:: mongodb

.. contents:: On this page
   :local:
   :backlinks: none
   :depth: 1
   :class: onecol

This page lists the changes introduced in each new version of the 
{+atlas-arch-center+}.

v20250228
---------

**Released 28 Feb, 2025**

- Releases the first version of the {+atlas-arch-center+}, including
  guidance to:

  - :ref:`Design a landing zone <arch-center-landing-zone>`.
  - Set up a single-region, single-cloud {+service+} architecture in
    alignment with the {+waf+}, including example commands for the
    {+atlas-cli+} and Terraform. To get started, see :ref:`arch-center-hierarchy`.