@@ -1,5 +1,6 @@
 name = "atlas-architecture"
 title = "Atlas Architecture Center"
+eol = true
 
 intersphinx = [ "https://www.mongodb.com/docs/master/objects.inv",
                 "https://www.mongodb.com/docs/drivers/objects.inv",
@@ -378,4 +379,11 @@ targets = ["index.txt", "high-availability.txt", "resiliency.txt"]
 variant = "info"
 value = """\
     The {+atlas-arch-center+} is in early release and includes recommendations for a single-cloud, single-region architecture. MongoDB plans to add multi-region recommendations, recommendations for compliance with external standards, and a plug-and-play Terraform code repository in future releases.
+    """
+
+[[banners]]
+targets = ["*"]
+variant = "info"
+value = """\
+    This version of the documentation is archived and no longer supported. View the `current documentation <https://www.mongodb.com/docs/atlas/architecture/current/>`__.\
     """
